--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,18 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+
+
+#############
+## Maya
+#############
+*.swatches
+*.mayaSwatches/
+
+
+#############
+## Project
+#############
+
+./reference/
+./concept/
